# AQI_Health_Advisory

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
logic/: get_data.py  get_history.py  get_weather.py  predict.py  train_model.py
